==> sam0737/chibios-rt-arduino-due/os/hal/platforms/SAM3XA/spi_lld.c <==
#include "ch.h"
#include "hal.h"
#define IS_USE_DMA(spip) (spip->config->use_dma)
#define IS_USE_DMA(spip) (0)

void spi_lld_init(void) {
#if SAM3XA_SPI_USE_SPI1
  /* Driver initialization.*/
  spiObjectInit(&SPID1);
#endif
}

void spi_lld_start(SPIDriver *spip) {
  uint8_t scbr =
    spip->config->speed == 0 ? 0xFF :
    SystemCoreClock < spip->config->speed ? 0x01 :
    SystemCoreClock / spip->config->speed > 0xFF ? 0xFF :
    SystemCoreClock / spip->config->speed;

  if (spip->state == SPI_STOP) {
    uint32_t irq_priority =
        spip->config->irq_priority ? spip->config->irq_priority :
        SAM3XA_SPI_DEFAULT_IRQ_PRIORITY;
    chDbgCheck(CORTEX_IS_VALID_KERNEL_PRIORITY(irq_priority),
        "SPI irq_priority");

    pmc_enable_peripheral_clock(spip->peripheral_id);
    nvicEnableVector(spip->irq_id, CORTEX_PRIORITY_MASK(irq_priority));

    spip->spi->SPI_CR = SPI_CR_SPIDIS;
    spip->spi->SPI_CR = SPI_CR_SWRST;
    spip->spi->SPI_CR = SPI_CR_SWRST;
    spip->spi->SPI_MR = SPI_MR_MSTR | SPI_MR_MODFDIS;
    spip->spi->SPI_CSR[0] = SPI_CSR_BITS_8_BIT | SPI_CSR_CSAAT |
        SPI_CSR_SCBR(scbr) | (
        spip->config->spi_mode == 1 ? 0 :
        spip->config->spi_mode == 2 ? SPI_CSR_CPOL | SPI_CSR_NCPHA :
        spip->config->spi_mode == 3 ? SPI_CSR_CPOL :
        SPI_CSR_NCPHA);

    peripheral_pin_apply(&spip->config->spck_pin);
    peripheral_pin_apply(&spip->config->miso_pin);
    peripheral_pin_apply(&spip->config->mosi_pin);
    palSetPad(spip->config->cs_pin.port, spip->config->cs_pin.pin);
    palSetPadMode(spip->config->cs_pin.port, spip->config->cs_pin.pin, PAL_MODE_OUTPUT_OPENDRAIN);

    spip->spi->SPI_CR = SPI_CR_SPIEN;
  } else {
    // MMC_SD will reconfigure us without stopping
    spip->spi->SPI_CSR[0] = SPI_CSR_BITS_8_BIT | SPI_CSR_CSAAT |
        SPI_CSR_SCBR(scbr) | (
        spip->config->spi_mode == 1 ? 0 :
        spip->config->spi_mode == 2 ? SPI_CSR_CPOL | SPI_CSR_NCPHA :
        spip->config->spi_mode == 3 ? SPI_CSR_CPOL :
        SPI_CSR_NCPHA);
  }
}

void spi_lld_stop(SPIDriver *spip) {

  if (spip->state == SPI_READY) {
    /* Resets the peripheral.*/
    spip->spi->SPI_CR = SPI_CR_SPIDIS | SPI_CR_SWRST;

    /* Disables the peripheral.*/
    peripheral_pin_reset(&spip->config->spck_pin);
    peripheral_pin_reset(&spip->config->miso_pin);
    peripheral_pin_reset(&spip->config->mosi_pin);
  }
}

void spi_lld_select(SPIDriver *spip) {
  palClearPad(spip->config->cs_pin.port, spip->config->cs_pin.pin);
}

void spi_lld_unselect(SPIDriver *spip) {
  palSetPad(spip->config->cs_pin.port, spip->config->cs_pin.pin);
}

void spi_lld_ignore(SPIDriver *spip, size_t n) {
#if SAM3XA_USB_USE_DMAC
  if (IS_USE_DMA(spip)) {
    dmac_prepare_receive_dummy(spip->config->dma_rx_ch, spip->dma_rx_per,
        serve_spi_dma, spip,
        n, (void*)&spip->spi->SPI_RDR);
    dmac_prepare_send_dummy(spip->config->dma_tx_ch, spip->dma_tx_per,
        NULL, NULL,
        n, 0xFF, (void*)&spip->spi->SPI_TDR);
    dmac_channel_start(spip->config->dma_rx_ch);
    dmac_channel_start(spip->config->dma_tx_ch);
    return;
  }
#endif
  spip->size = n;
  spip->tx_buf = 0;
  spip->rx_buf = 0;

  spip->spi->SPI_IER = SPI_IER_RDRF;
  spip->spi->SPI_TDR = 0xFFFF;
}

void spi_lld_exchange(SPIDriver *spip, size_t n,
                      const void *txbuf, void *rxbuf) {
#if SAM3XA_USB_USE_DMAC
  if (IS_USE_DMA(spip)) {
    dmac_prepare_receive(spip->config->dma_rx_ch, spip->dma_rx_per,
        serve_spi_dma, spip,
        n, rxbuf, (void*)&spip->spi->SPI_RDR);
    dmac_prepare_send(spip->config->dma_tx_ch, spip->dma_tx_per,
        NULL, NULL,
        n, txbuf, (void*)&spip->spi->SPI_TDR);
    dmac_channel_start(spip->config->dma_rx_ch);
    dmac_channel_start(spip->config->dma_tx_ch);
    return;
  }
#endif
  spip->size = n;
  spip->rx_buf = rxbuf;
  spip->tx_buf = (void*)txbuf;

  spip->spi->SPI_IER = SPI_IER_RDRF;
  spip->spi->SPI_TDR = *(uint8_t*)txbuf;
}

void spi_lld_send(SPIDriver *spip, size_t n, const void *txbuf) {
#if SAM3XA_USB_USE_DMAC
  if (IS_USE_DMA(spip)) {
    dmac_prepare_receive_dummy(spip->config->dma_rx_ch, spip->dma_rx_per,
        serve_spi_dma, spip,
        n, (void*)&spip->spi->SPI_RDR);
    dmac_prepare_send(spip->config->dma_tx_ch, spip->dma_tx_per,
        NULL, NULL,
        n, txbuf, (void*)&spip->spi->SPI_TDR);
    dmac_channel_start(spip->config->dma_rx_ch);
    dmac_channel_start(spip->config->dma_tx_ch);
    return;
  }
#endif
  spip->size = n;
  spip->rx_buf = 0;
  spip->tx_buf = (void*)txbuf;

  spip->spi->SPI_IER = SPI_IER_RDRF;
  spip->spi->SPI_TDR = *(uint8_t*)txbuf;
}

void spi_lld_receive(SPIDriver *spip, size_t n, void *rxbuf) {
#if SAM3XA_USB_USE_DMAC
  if (IS_USE_DMA(spip)) {
    dmac_prepare_receive(spip->config->dma_rx_ch, spip->dma_rx_per,
        serve_spi_dma, spip,
        n, rxbuf, (void*)&spip->spi->SPI_RDR);
    dmac_prepare_send_dummy(spip->config->dma_tx_ch, spip->dma_tx_per,
        NULL, NULL,
        n, 0xFF, (void*)&spip->spi->SPI_TDR);
    dmac_channel_start(spip->config->dma_rx_ch);
    dmac_channel_start(spip->config->dma_tx_ch);
    return;
  }
#endif
  spip->size = n;
  spip->rx_buf = rxbuf;
  spip->tx_buf = 0;

  spip->spi->SPI_IER = SPI_IER_RDRF;
  spip->spi->SPI_TDR = 0xFFFF;
}

uint16_t spi_lld_polled_exchange(SPIDriver *spip, uint16_t frame) {
  spip->spi->SPI_CR = SPI_CR_SPIEN;
  spip->spi->SPI_TDR = frame;
  while (!(spip->spi->SPI_SR & SPI_SR_RDRF));
  return spip->spi->SPI_RDR;
}
